# esp32-blackout

./: .gitignore  CMakeLists.txt  README.md
components/web_server/: CMakeLists.txt  Kconfig.projbuild  web_server.c
components/web_server/interface/: web_server.h
components/web_server/routes/: deauth_route.c  deauth_route.h  scan_route.c  scan_route.h
components/wifi_controller/: CMakeLists.txt  Kconfig.projbuild  wifi_controller.c
components/wifi_controller/attacks/: deauth.c  deauth.h  scanner.c  scanner.h
components/wifi_controller/interface/: wifi_controller.h
docs/attacks/: deauth.md
main/: CMakeLists.txt  main.c
